--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-scroller": "^2.2.4",
+    "vux": "^2.7.8"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
