--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "clipboard": "^2.0.0",
+    "echarts": "^4.0.4",
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
+    "vue-clipboard2": "^0.0.9",
     "vue-router": "^3.0.1",
     "vue-scroller": "^2.2.4",
     "vux": "^2.7.8"
